# clock-synchronization-algorithms

./: .gitignore  README.md
berkeley/: CMakeLists.txt  README.md  follower.cpp  leader.cpp
berkeley/protos/: follower.proto
cmake/: common.cmake
cristian/: CMakeLists.txt  README.md  time_client.cpp  time_server.cpp
cristian/protos/: time_server.proto
